tests/fixtures/pass/deep-nested/.chous
# Test: Deep nested directory behavior
in src:
  allow *.ts
  in components:
    allow *.tsx
    in ui:
      allow *.tsx, *.css
