tests/fixtures/fail/use-nested/.chous
# Test: Violate naming convention in nested directory
in components:
  use kebab-case for files **/*.tsx
